# hyperliquid_rust_local_core

./: Cargo.toml
src/: lib.rs  main.rs
src/api/: events.rs  mod.rs  protocol.rs  router.rs
src/api/queries/: mod.rs  spread.rs
src/api/streams/: mod.rs  wallet.rs
src/orderbook/: book.rs  diff.rs  entry.rs  loader.rs  mod.rs  price.rs  service.rs  sync.rs
src/parser/: mod.rs  stream.rs
src/parser/schemas/: book_diff.rs  common.rs  fill.rs  l4_snapshot.rs  misc_events.rs  mod.rs  order_status.rs  system_action.rs  trades.rs  twap_status.rs
src/reader/: file_rotation.rs  mod.rs  reader.rs  tracked_file.rs
src/transport/: mod.rs  zmq_server.rs
