[package]
name = "hl_rust_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
linemux = "0.3.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
sonic-rs = "0.5.6"
tokio = { version = "1.48.0", features = ["full"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }




