[package]
name = "hl_rust_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
linemux = "0.3.0"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
sonic-rs = "0.5.6"
tokio = { version = "1.48.0", features = ["full"] }
time = { version = "0.3", features = ["serde", "parsing", "formatting"] }
arc-swap = "1.7.1"
dashmap = "6.1.0"
imbl = "6.1.0"
reqwest = { version = "0.12.24", features = ["json"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
zeromq = "0.4.1"
rmp-serde = "1.3.0"
uuid = {version = "1.19.0", features = ["v4"]}
bytes = "1.11.0"




